crates/reinhardt-urls/routers-macros/tests/ui/fail/wildcard_not_at_end.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: wildcard not at end of path
	let _path = path!("/files/*/download");
}
